--- a/hw4/surveyAngular/src/app/component/result/result.component.html
+++ b/hw4/surveyAngular/src/app/component/result/result.component.html
@@ -14,7 +14,7 @@
     </div>
     <div>
         <!-- <button type="button" label="Click" (click)="showList()"><i>click to show survey list</i></button> -->
-        <div>
+        <div class="xxxxx">
             <show-survey-list> [showMePartially]="showVar"></show-survey-list>
         </div>
    </div>
